@@ -91,5 +91,14 @@
       <a href="success.html" id="child">Success</a>
     </div>
 
+    <article id="article_id">HTML 5 Article</article>
+    <header id="header_id">HTML 5 Header</header>
+    <footer id="footer_id">HTML 5 Footer</footer>
+
+    <details id="details_id">
+      <summary id="summary_id">The summary</summary>
+      The details
+    </details>
+
   </body>
 </html>
